Update education honors from 'Cum Laude' to 'Onderscheiding'

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
       <h2>Education</h2>
       <ul>
         <li>
-          <strong>Master of Arts in Linguistics and Literature Latin & Greek</strong> – University Gent, 1993-1998, Cum Laude
+          <strong>Master of Arts in Linguistics and Literature Latin & Greek</strong> – University Gent, 1993-1998, Onderscheiding
         </li>
         <li>
           <strong>Freie Universität Berlin</strong> – Erasmus Exchange Program, 1995
